# ITP

./: CMakeLists.txt  main.cpp
include/: check_mesh_manifold_and_orientation.h  get_dijkstra_edges_path.h  signpost_data_structure.h
src/: check_mesh_manifold_and_orientation.cpp  get_dijkstra_edges_path.cpp  signpost_data_structure.cpp
